[package]
name = "binator_nom"
authors = ["Stargateur"]
version = "0.0.1"
description = "binator nom adaptater"
license = "Zlib"
repository = "https://github.com/binator/nom"
readme = "readme.md"
keywords = ["parsing", "combinator", "ascii"]
categories = ["parsing"]
edition = "2021"

include = [
  "readme.md",
  "license.md",
  "Cargo.toml",
  "rustfmt.toml",
  "src/**/*.rs",
]

[dependencies]
nom = '7'
binator = "0.3.0"

[dev-dependencies]
binator = "0.3.0"
pretty_assertions = "1"
derive-new = "0.5"
derive_more = "0.99"